[package]
name = "tonic-scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.12.3"
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
